# video-sum

./: pyproject.toml
src/gui/: caption_app.py  transcription_app.py
src/llm/: caption_analyzer.py  transcription_analyzer.py
src/text/: caption.py
src/util/: file_utils.py  text_utils.py  video_utils.py
